[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "salesforce-lavis"
version = "1.0.1"
description = "LAVIS - A Library for Language-Vision Intelligence"
authors = ["Salesforce"]
license = "BSD-3"

[tool.poetry.dependencies]
contexttimer = "*"
decord = "*"
diffusers = "<=0.16.0"
einops = ">=0.4.1"
fairscale = "0.4.4"
ftfy = "*"
iopath = "*"
ipython = "*"
omegaconf = "*"
opencv-python-headless = "4.5.5.64"
opendatasets = "*"
packaging = "*"
pandas = "*"
plotly = "*"
pre-commit = "*"
pycocoevalcap = "*"
pycocotools = "*"
python-magic = "*"
scikit-image = "*"
sentencepiece = "*"
spacy = "*"
streamlit = "*"
timm = "0.4.12"
torch = ">=1.10.0"
torchvision = "*"
tqdm = "*"
transformers = "4.33.2"
webdataset = "*"
wheel = "*"
torchaudio = "*"
soundfile = "*"
moviepy = "*"
nltk = "*"
peft = "*"

easydict = "1.9"
pyyaml_env_tag = "0.1"
open3d = "0.13.0"
h5py = "*"

python = ">=3.10,<3.13"
